# heretic

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  PAIN_POINTS.md  README.md  ROADMAP.md  WORKFLOW.md  chat_app.py  config.default.toml  docker-compose.yml  docker-entrypoint.sh  knowledge.md  pyproject.toml  runpod.ps1  test_model.py
experiments/hedging/: README.md  confident_prompts.json  config.hedging.toml  hedged_prompts.json  load_local_dataset.py
experiments/verbosity/: README.md  concise_prompts.json  config.verbosity.toml  eval_verbosity.py  load_local_dataset.py  run_spike.ps1  run_spike.sh  test_comparison.py  test_comparison_4bit.py  verbose_prompts.json
experiments/verbosity_v2/: README.md  concise_prompts.json  config.verbosity_v2.toml  load_local_dataset.py  verbose_prompts.json
experiments/verbosity_v2/concise_dataset/test/: data-00000-of-00001.arrow  state.json
experiments/verbosity_v2/concise_dataset/train/: data-00000-of-00001.arrow  state.json
experiments/verbosity_v2/verbose_dataset/test/: data-00000-of-00001.arrow  state.json
experiments/verbosity_v2/verbose_dataset/train/: data-00000-of-00001.arrow  state.json
src/heretic/: config.py  evaluator.py  main.py  model.py  utils.py  vast.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_abliteration_flow.py
tests/unit/: __init__.py  test_config.py  test_evaluator.py  test_model.py  test_vast.py
