[project]
name = "heretic-llm"
version = "1.0.1"
description = "Fully automatic censorship removal for language models"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Philipp Emanuel Weidmann", email = "pew@worldwidemann.com" }
]
requires-python = ">=3.10"
keywords = ["llm", "transformer", "abliteration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=4.0.0",
    "ddgs>=9.10.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.34.4",
    "optuna>=4.5.0",
    "pydantic-settings>=2.10.1",
    "questionary>=2.1.1",
    "rich>=14.1.0",
    "transformers>=4.55.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[project.urls]
Homepage = "https://github.com/p-e-w/heretic"
Documentation = "https://github.com/p-e-w/heretic"
Repository = "https://github.com/p-e-w/heretic.git"
Issues = "https://github.com/p-e-w/heretic/issues"
Changelog = "https://github.com/p-e-w/heretic/commits/master/"

[project.scripts]
heretic = "heretic.main:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "heretic"
